test: hasMessage 추가를 통한 오류 메시지 테스트 출력